# GoldstarBoard

./: .env  .gitignore  .oxfmtrc.json  .oxlintrc.json  DATABASE.md  NOTES.md  PLANS.md  PROPOSAL.md  README.md  TASK.md  app.json  docker-compose.yml  package.json  turbo.json
.github/ISSUE_TEMPLATE/: FEATURE.md  TASK.md
.github/workflows/: build.yml
.zed/: settings.json
apps/admin/: .env.example  Dockerfile  entrypoint.sh  package.json  plan.md  (+1 more)
client/: .oxfmtrc.json  .oxlintrc.json  app.json  babel.config.js  package.json
server/: .env.example  TASK.md  docker-compose.yml  main.py  package.json  parser.py  pyproject.toml  scraper.py
server/goldstarboardproject/: Dockerfile  db.sqlite3  entrypoint.prod.sh  manage.py
server/goldstarboardproject/api/: serializers.py  views.py
server/goldstarboardproject/goldstarboard/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
server/goldstarboardproject/goldstarboard/api/: views.py
server/goldstarboardproject/goldstarboard/scraper/: models.py  stats.py
server/goldstarboardproject/scraper/: admin.py  apps.py  converters.py  models.py  parser.py  scheduler.py  scraper.py  services.py  stats.py  streaks.py  tasks.py  test.py
server/goldstarboardproject/scraper/migrations/: 0001_initial.py  0002_remove_hourlydata_updated_at_and_more.py  0003_remove_hourlydata_precip_remove_hourlydata_temp_avg.py  0004_alter_streak_station.py  0005_rename_current_gold_star_streak_streak_current_hot_streak_and_more.py
server/iwl_server/: manage.py
server/iwl_server/iwl_server_project/: asgi.py  settings.py  urls.py  wsgi.py
(+178 files in other folders)
