[project]
name = "server"
version = "0.1.0"
description = "Backend for ITAS Weather Leaderboard"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.3",
    "django-celery-beat>=2.9.0",
    "django-crontask>=1.1.3",
    "djangorestframework>=3.17.0",
    "gunicorn>=25.2.0",
    "psycopg[binary]>=3.3.3",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "whitenoise>=6.9.0",
]
